--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "tj_cronometro" "\0"
+            VALUE "CompanyName", "com.mariosoft.tj_cronometro" "\0"
+            VALUE "FileDescription", "TJ Cronómetro" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "tj_cronometro" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2026 com.example. All rights reserved." "\0"
+            VALUE "InternalName", "TJ Cronómetro" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2026 com.mariosoft.tj_cronometro. All rights reserved." "\0"
             VALUE "OriginalFilename", "tj_cronometro.exe" "\0"
-            VALUE "ProductName", "tj_cronometro" "\0"
+            VALUE "ProductName", "TJ Cronómetro" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
