Cambios en la configuración de Netlify para despliegue de Flutter Web
### Explicación de los cambios:
Los cambios en el archivo `netlify.toml` actualizan la configuración de despliegue de una aplicación Flutter Web en Netlify, reemplazando la instalación manual de Flutter por el uso de un plugin oficial de Netlify. Específicamente:

- **Adición de plugin `netlify-plugin-flutter`**: Se agrega una sección `[[plugins]]` con el paquete `netlify-plugin-flutter` y canal `stable`. Esto permite que Netlify instale y use Flutter automáticamente durante el build, eliminando la necesidad de configurar versiones manualmente en el entorno.

- **Reorganización de la sección `[build]`**: Se mueve el comando de build (`flutter build web --release`) y el directorio de publicación (`build/web`) dentro de la sección `[build]`, manteniendo la funcionalidad pero ajustando la estructura para compatibilidad con el plugin.

- **Eliminación de `[build.environment]`**: Se remueve la variable `FLUTTER_VERSION = "3.24.5"`, ya que el plugin maneja la instalación y versión de Flutter automáticamente.

- **Redirecciones SPA intactas**: Las reglas de redirección para el enrutamiento de aplicación de página única (SPA) en Flutter Web permanecen sin cambios.

### Propósito:
El propósito principal es simplificar y modernizar el proceso de despliegue en Netlify, aprovechando el plugin oficial `netlify-plugin-flutter` para automatizar la instalación de Flutter. Esto reduce la complejidad de configuración, mejora la confiabilidad del build y asegura el uso de la versión estable de Flutter sin intervención manual. Evita problemas potenciales con versiones incompatibles y facilita el mantenimiento del proyecto.

### Resumen:
Estos cambios optimizan la configuración de Netlify para aplicaciones Flutter Web, pasando de una configuración manual a una basada en plugin, lo que mejora la eficiencia y reduce errores en el despliegue. El resultado es un setup más limpio y automatizado, ideal para proyectos Flutte

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,16 @@
 # Netlify configuration for Flutter Web deployment
 
-[build]
-  # Directory to publish (output of flutter build web)
-  publish = "build/web"
-  # Build command
-  command = "flutter build web --release"
+[[plugins]]
 
-# Install Flutter as a dependency
-[build.environment]
-  FLUTTER_VERSION = "3.24.5"
+  package = "netlify-plugin-flutter"
+
+   [plugins.inputs]
+    channel = "stable"
+
+[build]
+
+command = "flutter build web --release"
+publish = "build/web"
 
 # SPA routing for Flutter web app
 [[redirects]]
